# backend

app/config/: plaid.py
app/services/: crud.py
app/utils/: utils.py
backend/: pyproject.toml
backend/app/models/: models.py
backend/app/routers/: routes.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.jsx  index.jsx
