[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["chatofking <chat_4432@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alpaca-py = "^0.7.1"
cognitojwt = {extras = ["sync"], version = "^1.4.1"}
boto3 = "^1.26.59"
fastapi = {extras = ["all"], version = "^0.89.1"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-dotenv = "^0.21.1"
sqlalchemy = "^2.0.0"
faker = "^16.6.1"
plaid-python = "^11.4.0"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
